--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ip": "^1.1.5",
     "mongodb": "^2.2.30",
     "mongoose": "^5.2.13",
+    "nodemailer": "^6.3.0",
     "socket.io": "^2.2.0"
   }
 }
