--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "test": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "chalk": "^1.1.3",
-    "exceljs": "^1.9.0",
+    "child-process-promise": "^2.2.1",
+    "exceljs": "^4.3.0",
     "express": "^4.16.4",
     "html": "^1.0.0",
     "ip": "^1.1.5",
-    "mongodb": "^2.2.30",
+    "moment": "^2.29.4",
+    "mongodb": "^4.12.0",
     "mongoose": "^5.2.13",
     "nodemailer": "^6.3.0",
     "socket.io": "^2.2.0"
